# web-gallery_backend_h2o-drogon

./: CMakeLists.txt  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
docs/: er-model.md  h2o.conf  h2o.dev.conf
docs/api/: api_de.md  api_en.md  location_tree.json  photo_list.json  user_info.json
docs/architecture/: ARCHITECTURE.md
docs/documentation/: BUILD_DE.md  BUILD_EN.md  DEV_SETUP_DE.md  DEV_SETUP_EN.md  INSTALL_DE.md  INSTALL_EN.md  env.example  postgresql.md
src/api/controllers/: auth_controller.cpp  auth_controller.hpp  location_controller.cpp  location_controller.hpp  photo_controller.cpp  photo_controller.hpp  user_controller.cpp  user_controller.hpp
src/api/middleware/: auth_middleware.hpp  optional_auth_middleware.hpp
src/app/: import_main copy.cpp  import_main.cpp  main.cpp
src/core/config/: config_loader.cpp  config_loader.hpp
src/core/logging/: logger_factory.cpp  logger_factory.hpp
src/domain/interfaces/: i_photo_repository.hpp  i_user_repository.hpp
src/domain/models/: photo_models.hpp  user_models.hpp
src/domain/services/: auth_service.cpp  auth_service.hpp  password_service.cpp  password_service.hpp  security_event_service.hpp  token_service.cpp  token_service.hpp  totp_service.cpp  totp_service.hpp
src/infra/db/: schema.sql  setup.sql
src/infra/repositories/: photo_repository.cpp  photo_repository.hpp  user_repository.cpp  user_repository.hpp
src/infra/util/: path_parser.hpp
